qualivida-clinica/public/styles/general.css
:root {
    --color1: #095256;
    --color2: #087F8C;
}

.btn-primary {
    --bs-btn-bg: var(--color2);
    --bs-btn-border-color: var(--color2);
    --bs-btn-hover-color: var(--color2);
    --bs-btn-hover-bg: white;
    --bs-btn-hover-border-color: var(--color2);
    --bs-btn-active-color: (var(--color2));
    --bs-btn-active-bg: white;
    --bs-btn-active-border-color: var(--color2);
    --bs-btn-disabled-bg: var(--color2);
    --bs-btn-disabled-border-color: var(--color2);
    transition: all .2s;
}

.btn-primary:active {
    filter: brightness(90%);
}

.btn-outline-dark {
    --bs-btn-color: var(--color2);
    --bs-btn-border-color: var(--color2);
    --bs-btn-hover-bg: var(--color2);
    --bs-btn-hover-border-color: var(--color2);
    --bs-btn-active-bg: var(--color2);
    --bs-btn-active-border-color: var(--color2);
    --bs-btn-disabled-color: var(--color2);
    --bs-btn-disabled-border-color: var(--color2);
}

.btn-outline-dark:active {
    filter: brightness(80%);
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.dropdown-menu {
    --bs-dropdown-link-active-bg: var(--color2);
    animation: fadeIn 0.2s ease-in-out;
}

